# katvan

./: .editorconfig  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  release.yml
core/: CMakeLists.txt  katvan_completionmanager.cpp  katvan_diagnosticsmodel.cpp  katvan_diagnosticsmodel.h  katvan_editor.cpp  katvan_editor.h  katvan_editortooltip.cpp  katvan_parsing_matchers.h  katvan_spellchecker.cpp  katvan_spellchecker.h  katvan_spellchecker_hunspell.cpp  katvan_spellchecker_hunspell.h  katvan_spellchecker_macos.h  katvan_spellchecker_macos.mm
macshell/: .bartycrouch.toml  .gitattributes  CMakeLists.txt  Info.plist.in  macshell_appdelegate.mm  macshell_editorstatusbar.h  macshell_editorstatusbar.mm  macshell_editorview.h  macshell_editorview.mm  macshell_exporter.h  macshell_exporter.mm  macshell_issuelist.h  macshell_issuelist.mm  macshell_labelsview.h  macshell_labelsview.mm  macshell_mainmenu.mm  macshell_outlineview.mm  macshell_previewer.h  macshell_previewer.mm  macshell_settingsdialog.h  macshell_settingsdialog.mm  macshell_settingsmanager.h  macshell_settingsmanager.mm  macshell_sidebar.mm  macshell_spellchecker.h  macshell_spellchecker.mm  macshell_textfinderclient.mm  macshell_widgets.h  macshell_widgets.mm  macshell_windowcontroller.mm
macshell/translations/en.lproj/: Localizable.stringsdict
macshell/translations/he.lproj/: Localizable.strings  Localizable.stringsdict
shell/: CMakeLists.txt  katvan_mainwindow.cpp  katvan_mainwindow.h  katvan_previewer.cpp  katvan_searchbar.cpp  katvan_utils.cpp  katvan_utils.h  main.cpp
tests/: katvan_editor.t.cpp  katvan_parsing.t.cpp  katvan_spellchecker.t.cpp
typstdriver/rust/: Cargo.toml
typstdriver/rust/src/: analysis.rs  darkifier.rs  engine.rs  pathmap.rs  tests.rs  util.rs  world.rs
