[package]
name = "typstdriver_rs"
edition = "2024"
publish = false
rust-version = "1.92"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.192"
codex = "0.2.0"
typst = { git = "https://github.com/IuvenisSapiens/typst" , branch = "feat_enhanced", package = "typst"}
typst-syntax = { git = "https://github.com/IuvenisSapiens/typst" , branch = "feat_enhanced", package = "typst-syntax"}
typst-pdf = { git = "https://github.com/IuvenisSapiens/typst", branch = "feat_enhanced", package = "typst-pdf"}
typst-render = { git = "https://github.com/IuvenisSapiens/typst", branch = "feat_enhanced", package = "typst-render"}
typst-ide = { git = "https://github.com/IuvenisSapiens/typst", branch = "feat_enhanced", package = "typst-ide"}
typst-kit = { git = "https://github.com/IuvenisSapiens/typst", branch = "feat_enhanced", package = "typst-kit" }

anyhow = "1.0.100"
once_cell = "1.21.3"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
serde = "1.0.228"
serde_json = "1.0.149"
time = { version = "0.3.45", features = ["parsing"] }
unicode-math-class = "0.1.0"
unicode-segmentation = "1.12.0"
unicode_names2 = "2.0.0"
xattr = { version = "1.6.1", optional = true }
icu_properties = { version = "2.1.2", features = ["serde"] }
icu_provider = { version = "2.1.1", features = ["sync"] }
icu_provider_adapters = "2.1.1"
icu_provider_blob = "2.1.1"
icu_segmenter = { version = "2.1.2", features = ["serde"] }
dirs = "6.0.0"


# We don't actually need IDNA support - pin a no-op adapter
idna_adapter = "1.2.1"

[features]
flatpak = ["dep:xattr"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
