[package]
name = "typstdriver_rs"
edition = "2024"
publish = false
rust-version = "1.96"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.194"

codex = "0.3.0"
typst = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst"}
typst-eval = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-eval"}
typst-layout = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-layout" }
typst-pdf = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-pdf" }
typst-render = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-render" }
typst-ide = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-ide" }
typst-kit = { git = "https://github.com/IuvenisSapiens/typst", branch = "now", package = "typst-kit", features = ["scan-fonts", "embedded-fonts"] }

anyhow = "1.0.102"
once_cell = "1.21.4"
serde = "1.0.228"
serde_json = "1.0.150"
time = { version = "0.3.51", features = ["parsing"] }
unicode-math-class = "0.1.0"
unicode-segmentation = "1.13.3"
unicode_names2 = "3.1.0"
xattr = { version = "1.6.1", optional = true }

# We don't actually need IDNA support - pin a no-op adapter
idna_adapter = "1.2.2"

[features]
flatpak = ["dep:xattr"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
